// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ForgotPasswordScreenTemplate renders correctly with en-US locale 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": {
                      "flex": 1,
                    },
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "Having trouble remembering your password? Input your email address below and we’ll send you instructions to reset it.",
                  ],
                  "props": {
                    "onPress": undefined,
                    "style": [
                      {
                        "flex": 1,
                        "fontFamily": "calibre_app_regular",
                        "fontSize": 16,
                      },
                      {
                        "color": "rgba(98, 91, 113, 1)",
                      },
                      undefined,
                    ],
                  },
                  "type": "Text",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": {
                      "flex": 1,
                    },
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "style": [
                          {
                            "bottom": 0,
                            "height": 2,
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "zIndex": 1,
                          },
                          {
                            "height": 1,
                          },
                          {
                            "backgroundColor": "#ffffff",
                            "transform": [
                              {
                                "scaleY": 0.5,
                              },
                            ],
                          },
                          undefined,
                        ],
                        "testID": "text-input-underline",
                      },
                      "type": "Animated.View",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "cursorColor": "#00ffe6",
                            "editable": true,
                            "keyboardType": "email-address",
                            "maxFontSizeMultiplier": 1.5,
                            "multiline": false,
                            "onBlur": [Function],
                            "onChangeText": [Function],
                            "onFocus": [Function],
                            "placeholder": undefined,
                            "placeholderTextColor": "transparent",
                            "ref": [Function],
                            "selectionColor": "#ffffff",
                            "set": [class Function],
                            "style": [
                              {
                                "flexGrow": 1,
                                "margin": 0,
                              },
                              {},
                              {
                                "paddingBottom": 0,
                                "paddingTop": 0,
                              },
                              {
                                "color": "rgba(28, 27, 31, 1)",
                                "fontFamily": "System",
                                "fontSize": 12,
                                "fontWeight": undefined,
                                "letterSpacing": 0.15,
                                "lineHeight": undefined,
                                "minWidth": 65,
                                "paddingLeft": 16,
                                "paddingRight": 16,
                                "textAlign": "left",
                                "textAlignVertical": "center",
                              },
                              undefined,
                              [
                                {},
                              ],
                              undefined,
                            ],
                            "testID": "text-input-flat",
                            "underlineColorAndroid": "transparent",
                            "value": "",
                          },
                          "type": "TextInput",
                        },
                      ],
                      "props": {
                        "onLayout": [Function],
                        "style": [
                          {
                            "flexGrow": 1,
                            "paddingBottom": 0,
                            "paddingTop": 0,
                          },
                          {
                            "minHeight": 56,
                          },
                        ],
                      },
                      "type": "View",
                    },
                  ],
                  "props": {
                    "style": [
                      {
                        "backgroundColor": "rgba(231, 224, 236, 1)",
                        "borderTopLeftRadius": 2,
                        "borderTopRightRadius": 2,
                      },
                      {
                        "fontFamily": "calibre_app_regular",
                        "marginBottom": 16,
                        "width": 279,
                      },
                    ],
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": [
                      {
                        "fontFamily": "calibre_app_regular",
                        "fontSize": 13,
                        "marginBottom": 18,
                      },
                      {
                        "color": "#ff4310",
                      },
                      undefined,
                    ],
                  },
                  "type": "Text",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Request Reset",
                                  ],
                                  "props": {
                                    "maxFontSizeMultiplier": undefined,
                                    "numberOfLines": 1,
                                    "ref": {
                                      "current": null,
                                    },
                                    "selectable": false,
                                    "style": [
                                      {
                                        "textAlign": "left",
                                      },
                                      {
                                        "color": "rgba(28, 27, 31, 1)",
                                        "writingDirection": "ltr",
                                      },
                                      [
                                        {
                                          "fontFamily": "System",
                                          "fontSize": 14,
                                          "fontWeight": "500",
                                          "letterSpacing": 0.1,
                                          "lineHeight": 20,
                                        },
                                        [
                                          {
                                            "marginHorizontal": 16,
                                            "marginVertical": 9,
                                            "textAlign": "center",
                                          },
                                          false,
                                          {
                                            "marginHorizontal": 24,
                                            "marginVertical": 10,
                                          },
                                          undefined,
                                          false,
                                          {
                                            "color": "rgba(255, 255, 255, 1)",
                                            "fontFamily": "System",
                                            "fontSize": 14,
                                            "fontWeight": "500",
                                            "letterSpacing": 0.1,
                                            "lineHeight": 20,
                                          },
                                          [
                                            {
                                              "fontFamily": "calibre_app_semibold",
                                              "fontSize": 24,
                                            },
                                            undefined,
                                          ],
                                        ],
                                      ],
                                    ],
                                    "testID": "button-text",
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": [
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                    "justifyContent": "center",
                                  },
                                  undefined,
                                ],
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "accessibilityHint": undefined,
                            "accessibilityLabel": undefined,
                            "accessibilityRole": "button",
                            "accessibilityState": {
                              "disabled": false,
                            },
                            "accessible": undefined,
                            "delayLongPress": undefined,
                            "disabled": false,
                            "hitSlop": undefined,
                            "onLongPress": undefined,
                            "onPress": [class Function],
                            "onPressIn": [Function],
                            "onPressOut": [Function],
                            "ref": null,
                            "style": [Function],
                            "testID": "button",
                          },
                          "type": "Pressable",
                        },
                      ],
                      "props": {
                        "needMargin": false,
                        "screenWidth": 400,
                        "style": {
                          "0": {
                            "borderRadius": 16,
                            "height": 50,
                            "marginBottom": 16,
                            "marginTop": 16,
                          },
                          "1": {
                            "width": 270,
                          },
                          "2": {
                            "marginRight": undefined,
                          },
                          "backgroundColor": "#00ffe6",
                          "borderColor": "transparent",
                          "borderRadius": 16,
                          "borderStyle": "solid",
                          "borderWidth": 0,
                          "flex": undefined,
                          "minWidth": 64,
                          "shadowColor": "#000",
                          "shadowOffset": {
                            "height": AnimatedValue {
                              "_v": 0,
                            },
                            "width": 0,
                          },
                          "shadowOpacity": AnimatedValue {
                            "_v": 0,
                          },
                          "shadowRadius": AnimatedValue {
                            "_v": 0,
                          },
                        },
                        "testID": "button-container",
                      },
                      "type": "Animated.View",
                    },
                  ],
                  "props": {
                    "ref": null,
                    "style": {
                      "backgroundColor": "#00ffe6",
                      "borderRadius": 16,
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": AnimatedValue {
                          "_v": 0,
                        },
                        "width": 0,
                      },
                      "shadowOpacity": AnimatedValue {
                        "_v": 0,
                      },
                      "shadowRadius": AnimatedValue {
                        "_v": 0,
                      },
                    },
                    "testID": "button-container-outer-layer",
                  },
                  "type": "Animated.View",
                },
              ],
              "props": {
                "style": [
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "justifyContent": "space-between",
                    "marginLeft": 48,
                    "marginRight": 48,
                  },
                  {
                    "backgroundColor": "#070724",
                  },
                  [
                    {
                      "maxHeight": 650,
                      "maxWidth": 650,
                    },
                    undefined,
                  ],
                ],
              },
              "type": "View",
            },
          ],
          "props": {
            "onLayout": undefined,
            "style": [
              {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              },
              {
                "backgroundColor": "#070724",
              },
              undefined,
            ],
          },
          "type": "View",
        },
      ],
      "props": {
        "collapsable": false,
        "pointerEvents": "box-none",
        "style": {
          "flex": 1,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": [
      {
        "flex": 1,
      },
      undefined,
    ],
  },
  "type": "View",
}
`;

exports[`ForgotPasswordScreenTemplate renders correctly with ja-JP locale 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": {
                      "flex": 1,
                    },
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    
"パスワードを思い出せませんか? 
下記にEメールアドレスを入力すれば、パスワードのリセット方法をお知らせします。"
,
                  ],
                  "props": {
                    "onPress": undefined,
                    "style": [
                      {
                        "flex": 1,
                        "fontFamily": "calibre_app_regular",
                        "fontSize": 16,
                      },
                      {
                        "color": "rgba(98, 91, 113, 1)",
                      },
                      undefined,
                    ],
                  },
                  "type": "Text",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": {
                      "flex": 1,
                    },
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "style": [
                          {
                            "bottom": 0,
                            "height": 2,
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "zIndex": 1,
                          },
                          {
                            "height": 1,
                          },
                          {
                            "backgroundColor": "#ffffff",
                            "transform": [
                              {
                                "scaleY": 0.5,
                              },
                            ],
                          },
                          undefined,
                        ],
                        "testID": "text-input-underline",
                      },
                      "type": "Animated.View",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "cursorColor": "#00ffe6",
                            "editable": true,
                            "keyboardType": "email-address",
                            "maxFontSizeMultiplier": 1.5,
                            "multiline": false,
                            "onBlur": [Function],
                            "onChangeText": [Function],
                            "onFocus": [Function],
                            "placeholder": undefined,
                            "placeholderTextColor": "transparent",
                            "ref": [Function],
                            "selectionColor": "#ffffff",
                            "set": [class Function],
                            "style": [
                              {
                                "flexGrow": 1,
                                "margin": 0,
                              },
                              {},
                              {
                                "paddingBottom": 0,
                                "paddingTop": 0,
                              },
                              {
                                "color": "rgba(28, 27, 31, 1)",
                                "fontFamily": "System",
                                "fontSize": 12,
                                "fontWeight": undefined,
                                "letterSpacing": 0.15,
                                "lineHeight": undefined,
                                "minWidth": 65,
                                "paddingLeft": 16,
                                "paddingRight": 16,
                                "textAlign": "left",
                                "textAlignVertical": "center",
                              },
                              undefined,
                              [
                                {},
                              ],
                              undefined,
                            ],
                            "testID": "text-input-flat",
                            "underlineColorAndroid": "transparent",
                            "value": "",
                          },
                          "type": "TextInput",
                        },
                      ],
                      "props": {
                        "onLayout": [Function],
                        "style": [
                          {
                            "flexGrow": 1,
                            "paddingBottom": 0,
                            "paddingTop": 0,
                          },
                          {
                            "minHeight": 56,
                          },
                        ],
                      },
                      "type": "View",
                    },
                  ],
                  "props": {
                    "style": [
                      {
                        "backgroundColor": "rgba(231, 224, 236, 1)",
                        "borderTopLeftRadius": 2,
                        "borderTopRightRadius": 2,
                      },
                      {
                        "fontFamily": "calibre_app_regular",
                        "marginBottom": 16,
                        "width": 279,
                      },
                    ],
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": [
                      {
                        "fontFamily": "calibre_app_regular",
                        "fontSize": 13,
                        "marginBottom": 18,
                      },
                      {
                        "color": "#ff4310",
                      },
                      undefined,
                    ],
                  },
                  "type": "Text",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Reset",
                                  ],
                                  "props": {
                                    "maxFontSizeMultiplier": undefined,
                                    "numberOfLines": 1,
                                    "ref": {
                                      "current": null,
                                    },
                                    "selectable": false,
                                    "style": [
                                      {
                                        "textAlign": "left",
                                      },
                                      {
                                        "color": "rgba(28, 27, 31, 1)",
                                        "writingDirection": "ltr",
                                      },
                                      [
                                        {
                                          "fontFamily": "System",
                                          "fontSize": 14,
                                          "fontWeight": "500",
                                          "letterSpacing": 0.1,
                                          "lineHeight": 20,
                                        },
                                        [
                                          {
                                            "marginHorizontal": 16,
                                            "marginVertical": 9,
                                            "textAlign": "center",
                                          },
                                          false,
                                          {
                                            "marginHorizontal": 24,
                                            "marginVertical": 10,
                                          },
                                          undefined,
                                          false,
                                          {
                                            "color": "rgba(255, 255, 255, 1)",
                                            "fontFamily": "System",
                                            "fontSize": 14,
                                            "fontWeight": "500",
                                            "letterSpacing": 0.1,
                                            "lineHeight": 20,
                                          },
                                          [
                                            {
                                              "fontFamily": "calibre_app_semibold",
                                              "fontSize": 24,
                                            },
                                            undefined,
                                          ],
                                        ],
                                      ],
                                    ],
                                    "testID": "button-text",
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": [
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                    "justifyContent": "center",
                                  },
                                  undefined,
                                ],
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "accessibilityHint": undefined,
                            "accessibilityLabel": undefined,
                            "accessibilityRole": "button",
                            "accessibilityState": {
                              "disabled": false,
                            },
                            "accessible": undefined,
                            "delayLongPress": undefined,
                            "disabled": false,
                            "hitSlop": undefined,
                            "onLongPress": undefined,
                            "onPress": [class Function],
                            "onPressIn": [Function],
                            "onPressOut": [Function],
                            "ref": null,
                            "style": [Function],
                            "testID": "button",
                          },
                          "type": "Pressable",
                        },
                      ],
                      "props": {
                        "needMargin": false,
                        "screenWidth": 400,
                        "style": {
                          "0": {
                            "borderRadius": 16,
                            "height": 50,
                            "marginBottom": 16,
                            "marginTop": 16,
                          },
                          "1": {
                            "width": 270,
                          },
                          "2": {
                            "marginRight": undefined,
                          },
                          "backgroundColor": "#00ffe6",
                          "borderColor": "transparent",
                          "borderRadius": 16,
                          "borderStyle": "solid",
                          "borderWidth": 0,
                          "flex": undefined,
                          "minWidth": 64,
                          "shadowColor": "#000",
                          "shadowOffset": {
                            "height": AnimatedValue {
                              "_v": 0,
                            },
                            "width": 0,
                          },
                          "shadowOpacity": AnimatedValue {
                            "_v": 0,
                          },
                          "shadowRadius": AnimatedValue {
                            "_v": 0,
                          },
                        },
                        "testID": "button-container",
                      },
                      "type": "Animated.View",
                    },
                  ],
                  "props": {
                    "ref": null,
                    "style": {
                      "backgroundColor": "#00ffe6",
                      "borderRadius": 16,
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": AnimatedValue {
                          "_v": 0,
                        },
                        "width": 0,
                      },
                      "shadowOpacity": AnimatedValue {
                        "_v": 0,
                      },
                      "shadowRadius": AnimatedValue {
                        "_v": 0,
                      },
                    },
                    "testID": "button-container-outer-layer",
                  },
                  "type": "Animated.View",
                },
              ],
              "props": {
                "style": [
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "justifyContent": "space-between",
                    "marginLeft": 48,
                    "marginRight": 48,
                  },
                  {
                    "backgroundColor": "#070724",
                  },
                  [
                    {
                      "maxHeight": 650,
                      "maxWidth": 650,
                    },
                    undefined,
                  ],
                ],
              },
              "type": "View",
            },
          ],
          "props": {
            "onLayout": undefined,
            "style": [
              {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              },
              {
                "backgroundColor": "#070724",
              },
              undefined,
            ],
          },
          "type": "View",
        },
      ],
      "props": {
        "collapsable": false,
        "pointerEvents": "box-none",
        "style": {
          "flex": 1,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": [
      {
        "flex": 1,
      },
      undefined,
    ],
  },
  "type": "View",
}
`;
